--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@ document.write(Date());
         </style>
         <div6>
           <img src="https://live.staticflickr.com/65535/51660749067_b88bfb7d84_t.jpg" width="97" height="100" alt="starter kit">
-          <run style="font-size:25px;font-weight:bold;color:#ff3312;">starter kit for 2 skulls
-            <p>
+          <run style="font-size:22px;font-weight:bold;color:#ff3312;">starter kit for 2 skulls (only elytra and pic enchanted)
+                        <p>
             </p>
             <style>
             </style>
