--- a/index.html
+++ b/index.html
@@ -477,7 +477,8 @@
             <div class="FootNote">
                 <p>When you are ready to order, screenshot your order list & send its to the <b>#trade-with-others</b> channel of our Discord server.
                     <br>
-                    <br>We will get to your order when both players (you and staff) are online.
+              <br>We will get to your order when both players (you and staff) are online.Failing to pay on demand at the place will allow pvp
+            </br>  <p>All bases (if sent cords to trade) will not be leaked
                 </p>
             </div>
         <a href="https://discord.gg/fa5B72swHY" id="Discord_Button">Order on Discord</a>
@@ -491,4 +492,4 @@
             </u>
         </div>
     </body>
-</html>  
+</html>
