--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,10 +11,7 @@
         <!-- * Webpage Title -->
         <title>Sunlight Goods</title>
     </head>
-    <body>
-        <script>
-            document.write(Date());
-        </script>
+    <body
         <div class="Frame">
             <p class="Title">Sunlight Goods</p>
             <p class="Subtitle">Size of background image might vary.</p>
@@ -476,10 +474,13 @@
             </div>
             <div class="FootNote">
                 <p>When you are ready to order, screenshot your order list & send its to the <b>#trade-with-others</b> channel of our Discord server.
-                    <br>
               <br>We will get to your order when both players (you and staff) are online.Failing to pay on demand at the place will allow pvp
             </br>  <p>All bases (if sent cords to trade) will not be leaked
                 </p>
+                <p> please tell us when you want to meet and for certain things you have to let us time to prepare </p>
+                <script>
+                    document.write(Date());
+                </script>
             </div>
         <a href="https://discord.gg/fa5B72swHY" id="Discord_Button">Order on Discord</a>
         <p style="font-size:80px;font-weight:bold;color:hsla(290,80%,50%,0.7);">List Of Items: </p>
