--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- * Webpage Title -->
         <title>Sunlight Goods</title>
     </head>
-    <body
+    <body>
         <div class="Frame">
             <p class="Title">Sunlight Goods</p>
             <p class="Subtitle">Size of background image might vary.</p>
