--- a/index.html
+++ b/index.html
@@ -472,6 +472,8 @@
                     }
                       document.write(Date());
                    }
+                   document.write(Date());
+                       } 
                 </script>
             </div>
             <div class="FootNote">
