--- a/index.html
+++ b/index.html
@@ -472,8 +472,6 @@
                     }
                       document.write(Date());
                    }
-                   document.write(Date());
-                       } 
                 </script>
             </div>
             <div class="FootNote">
@@ -482,9 +480,11 @@
             </br>  <p>All bases (if sent cords to trade) will not be leaked
                 </p>
                 <p> please tell us when you want to meet and for certain things you have to let us time to prepare </p>
-
-
-
+              </style>
+              }
+                document.write(Date());
+                    }
+</style>
             </div>
         <a href="https://discord.gg/fa5B72swHY" id="Discord_Button">Order on Discord</a>
         <p style="font-size:80px;font-weight:bold;color:hsla(290,80%,50%,0.7);">List Of Items: </p>
