--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
             </br>  <p>All bases (if sent cords to trade) will not be leaked
                 </p>
                 <p> please tell us when you want to meet and for certain things you have to let us time to prepare </p>
-              </style>
-              
+              <style>
+          }
                 document.write(Date());
                     }
 </style>
