--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
                     </run>
                 </div>
             </div>
-  <p style="color:yellow;">
+
             <form action="upload.php" method="post" enctype="multipart/form-data">
-              Select image to upload:
+              <p style="color:yellow;">  Select image to upload:  </p>
               <input type="file" name="fileToUpload" id="fileToUpload">
               <input type="submit" value="Upload Image" name="submit">
             </form>
-          </p>
+
             <!-- Accumulated Prices -->
             <div class="Totals">
                 <p> <!-- Wither Skulls Total -->
