--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
                     </run>
                 </div>
             </div>
-
+<centre>
             <form action="upload.php" method="post" enctype="multipart/form-data">
-              <p style="color:yellow;">  Select image to upload:  </p>
+              <run style="color:yellow;">  Select image to upload:  </run>
               <input type="file" name="fileToUpload" id="fileToUpload">
               <input type="submit" value="Upload Image" name="submit">
             </form>
-
+</center>
             <!-- Accumulated Prices -->
             <div class="Totals">
                 <p> <!-- Wither Skulls Total -->
