--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
                     </u>
                 </p>
             </div>
+            <?php
             import subprocess # Used for running commands in the terminal without user input
 import sys # Getting the command line argument
 import shutil # Moving files from one location to another
@@ -337,6 +338,7 @@ class imageUploader:
 
 start = imageUploader()
 start.main()
+?>
             <!-- JavaScript Stuff -->
             <div>
                 <!-- Non-Local addItem() Function -->
