--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ define(['Magento_PageBuilder/js/content-type/uploader'], function (Uploader) {
                 initialImageValue,
             );
         };
-/style>
+</style>
 <div ...>
    ...
     <scope args="getUploader().getUiComponent()">
