--- a/index.html
+++ b/index.html
@@ -280,60 +280,13 @@
                     </u>
                 </p>
             </div>
-            <?xml version="1.0"?>
-  <config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:module:Magento_PageBuilder:etc/content_type.xsd">
-      <type name="example_quote"
-  		...
-          <additional_data>
-              <item name="uploaderConfig" xsi:type="array">
-                  <item name="isShowImageUploadInstructions" xsi:type="boolean">false</item>
-                  <item name="isShowImageUploadOptions" xsi:type="boolean">true</item>
-                  <item name="maxFileSize" xsi:type="object">ImageMaxFileSizeDesktop</item>
-                  <item name="allowedExtensions" xsi:type="string">jpg jpeg gif png</item>
-                  <item name="component" xsi:type="string">Magento_PageBuilder/js/form/element/image-uploader</item>
-                  <item name="componentType" xsi:type="string">imageUploader</item>
-                  <item name="dataScope" xsi:type="string">background_image</item>
-                  <item name="formElement" xsi:type="string">imageUploader</item>
-                  <item name="uploaderConfig" xsi:type="array">
-                      <item name="url" xsi:type="object">Magento\PageBuilder\Model\Config\ContentType\AdditionalData\Provider\Uploader\SaveUrl</item>
-                  </item>
-                  <item name="previewTmpl" xsi:type="string">Magento_PageBuilder/form/element/uploader/preview</item>
-                  <item name="template" xsi:type="string">Magento_PageBuilder/form/element/uploader/preview/image</item>
-                  <item name="mediaGallery" xsi:type="array">
-                      <item name="openDialogUrl" xsi:type="object">Magento\PageBuilder\Model\Config\ContentType\AdditionalData\Provider\Uploader\OpenDialogUrl</item>
-                      <item name="openDialogTitle" xsi:type="string" translate="true">Insert Images...</item>
-                      <item name="initialOpenSubpath" xsi:type="string">wysiwyg</item>
-                      <item name="storeId" xsi:type="object">Magento\PageBuilder\Model\Config\ContentType\AdditionalData\Provider\StoreId</item>
-                  </item>
-                  <item name="validation" xsi:type="array">
-                      <item name="required-entry" xsi:type="boolean">true</item>
-                  </item>
-              </item>
-          </additional_data>
-      </type>
-  </config>
-<style
-define(['Magento_PageBuilder/js/content-type/uploader'], function (Uploader) {
-        Preview.prototype.getUploader = function () {
-            var initialImageValue = this.contentType.dataStore
-                .get(this.config.additional_data.uploaderConfig.dataScope, "");
+            <form action="index.html" method="post" enctype="multipart/form-data">
+                <label for="upload">File:</label>
+                <input type="file" name="upload" id="upload"><br/>
+                <input type="submit" name="submit" value="Upload">
+            </form>
 
-            return new Uploader(
-                "imageuploader_" + this.contentType.id,
-                this.config.additional_data.uploaderConfig,
-                this.contentType.id,
-                this.contentType.dataStore,
-                initialImageValue,
-            );
-        };
-</style>
-<div ...>
-   ...
-    <scope args="getUploader().getUiComponent()">
-        <render />
-    </scope>
-   ...
-</div>
+
 
             <!-- JavaScript Stuff -->
             <div>
