--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     </u>
                 </p>
             </div>
-            <form action="index.html" method="post" enctype="multipart/form-data">
+            <form action="FileUpload.php" method="post" enctype="multipart/form-data">
                 <label for="upload">File:</label>
                 <input type="file" name="upload" id="upload"><br/>
                 <input type="submit" name="submit" value="Upload">
