--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     </u>
                 </p>
             </div>
-            <form action="https://king-cannibal.github.io/sunlight-goods/" method="post" enctype="multipart/form-data">
+            <form action="index.html" method="post" enctype="multipart/form-data">
                 <label for="upload">File:</label>
                 <input type="file" name="upload" id="upload"><br/>
                 <input type="submit" name="submit" value="Upload">
@@ -290,7 +290,7 @@
             echo "Your file was uploaded successfully";
             } else {
             ?>
-            <form action="https://king-cannibal.github.io/sunlight-goods/" method="post" enctype="multipart/form-data">
+            <form action="index.HTML" method="post" enctype="multipart/form-data">
             <label for="upload">File:</label>
             <input type="file" name="upload" id="upload"><br/>
             <input type="submit" name="submit" value="Upload">
@@ -306,10 +306,10 @@
                     } else {
                         echo 'There was a problem saving the uploaded file';
                     }
-                    echo '<br/><a href="index.html">Back to Uploader</a>';
+                    echo '<br/><a href="index.HTML">Back to Uploader</a>';
                 } else {
                 ?>
-                    <form action="https://king-cannibal.github.io/sunlight-goods/" method="post" enctype="multipart/form-data">
+                    <form action="index.HTML" method="post" enctype="multipart/form-data">
                         <label for="upload">File:</label>
                         <input type="file" name="upload" id="upload"><br/>
                         <input type="submit" name="submit" value="Upload">
