--- a/index.html
+++ b/index.html
@@ -279,11 +279,23 @@
                     </u>
                 </p>
             </div>
-            <form action="https://sunlight-anarchy.000webhostapp.com/" method="post" enctype="multipart/form-data">
-                <label for="upload">File:</label>
-                <input type="file" name="upload" id="upload"><br/>
-                <input type="submit" name="submit" value="Upload">
-            </form>
+            <html>
+
+    <head>
+    </head>
+    <form method="post" action="IConductores.php" >
+    <p></p>
+        <label>Foto</label>
+        <input type="file" id="Foto" name="Foto">
+    <input type="submit" id="Enviar" name="Enviar">
+    </form>
+
+    </html>
+
+
+
+
+  
 
 
 
